<resources>
    <string name="app_name">MMS Mentor Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_a_profile_picture">Set a profile picture</string>
    <string name="btn_select_file">Select file</string>
    <string name="key_notification">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="title_edit">EditProfile</string>
    <string name="key_edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_changePassword">Change Password</string>
    <string name="key_change_password">Change Password</string>
    <string name="change_password">Change Password</string>
    <string name="title_profile_settings">Profile Settings</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_clear_app_data">Clear App Data</string>
    <string name="key_clear_app_data">Clear App Data</string>
    <string name="settings">Settings</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="notification">Notification</string>
    <string name="clear_app_data">Clear App Data</string>
    <string name="about_app">About App</string>
    <string name="support">Support</string>
    <string name="faq">FAQ</string>
    <string name="hello_kabir">Hello Kabir</string>
    <string name="alarm_notif">alarm_notif</string>
    <string name="twenty">20</string>
    <string name="five">5</string>
    <string name="profile_successfully_updated">Profile Successfully Updated</string>
    <string name="full_name">Full Name</string>
    <string name="headline">Headline</string>
    <string name="about">About</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="technical_proficiency">Technical Proficiency</string>
    <string name="previous_roles_held">Previous Roles Held</string>
    <string name="previous_programs">Previous Programs</string>
    <string name="input_previous_held_programs">Input previous held programs</string>
    <string name="documents">Documents</string>
    <string name="social">Social</string>
    <string name="github">Github</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">Linkedin</string>
    <string name="twitter">Twitter</string>
    <string name="save">Save</string>
    <string name="website">Website</string>

    <string-array name="Countries">
        <item>Kenya</item>
        <item>Nigeria</item>
        <item>South Africa</item>
        <item>Egypt</item>
        <item>Ethiopia</item>
        <item>Ghana</item>
    </string-array>

    <string-array name="Cities">
        <item>Nairobi</item>
        <item>Lagos</item>
        <item>Cape Town</item>
        <item>Cairo</item>
        <item>Addis Ababa</item>
        <item>Accra</item>
    </string-array>

    <string-array name="notification_category">
        <item>All</item>
        <item>Mentor</item>
        <item>Admin</item>
    </string-array>



    <!--Certificates Strings-->

    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="programs">programs</string>
    <string name="managers">Managers</string>
    <string name="tasks">Tasks</string>
    <string name="reports">reports</string>
    <string name="mentors">mentors</string>

    <string name="certificates">Certificates</string>
    <string name="messages">messages</string>



    <string name="logout">logout</string>
    <string name="btm_home">Home</string>
    <string name="btm_search">Search</string>
    <string name="btm_program">Program</string>
    <string name="btm_messages">Messages</string>
    <string name="btm_profile">Profile</string>
    <string name="mentor_image">mentorImage</string>
    <string name="mentor_manager">Mentor Manager</string>
    <string name="setting_link">settingLink</string>
    <string name="mentor_application">Mentor Application</string>
    <string name="requests">Requests</string>
    <string name="manage_reports">Manage Reports</string>
    <string name="add_new_mentor">Add New Mentor</string>
    <string name="send_broadcast_message">Send Broadcast Message</string>
    <string name="create_task">Create Task</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="_10">10</string>
    <string name="_5">5</string>
    <string name="_20">20</string>

    <string name="mark_all_as_read">Mark all as Read</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="notification_check_back_later">Notifications are on their way. Check back later when they arrive safely</string>


    <string name="approved_certificates">Approved Certificates</string>
    <string name="_287">287</string>
    <string name="view">View</string>
    <string name="cert_back">cert_back</string>
    <string name="cert_search">cert_search</string>
    <string name="cert_image">cert_image</string>
    <string name="_12">12</string>
    <string name="earned_certififcates">Earned Certififcates</string>
    <string name="certificates_pending_approval">Certificates pending approval</string>
    <string name="generate_new_certificate">Generate New Certificate</string>
    <string name="apply_for_certificate">Apply for Certificate</string>
    <string name="earn_img">earn_img</string>
    <string name="no">no</string>
    <string name="_3">3</string>
    <!--Certificates Strings-->

    <string name="earned_certs">Earned Certs</string>

    <string name="select_beneficiary">Select Beneficiary</string>
    <string name="Kenneth_uwakwe">Kenneth Uwakwe</string>
    <string name="judith_okafor">Judith Okafor</string>
    <string name="ayodele_oluwa">Ayodele Oluwa</string>
    <string name="jennifer_lopez">Jennifer Lopez</string>
    <string name="ebubechi_orijiakor">Ebubechi Orijiakor</string>

    <string name="generated_certificate">My Generate Certificate</string>


    <string name="program_asst">Program Asst</string>
    <string name="program_assistant_andela_she_her">Program Assistant,Andela,She/her</string>
    <string name="program_assit">Program Assit</string>
    <string name="mentor_gad">MENTOR-GAD</string>
    <string name="select_programs">Select Programs</string>

    <string name="peculiar_umeh">\@peculiar.umeh</string>

    <string name="discussion_forums">Discussion Forums</string>
    <string name="certificate_downloaded_successfully">Certificate Downloaded \n Successfully!</string>
    <string name="pending_Approval">Pending Approval</string>
    <string name="franka_kebede">Franka Kebede</string>
    <string name="gads_cloud_2022_compl">GADS CLOUD 2022-COMPL…</string>
    <string name="kenneth_uwakwe">Kenneth Uwakwe</string>
    <string name="select_program">Select Program</string>
    <string name="google_africa_developer_scholarship_program">Google Africa Developer Scholarship \n Program</string>

</resources>