<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/btm_home"
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_house_1"/>

    <item android:title="@string/btm_search"
        android:id="@+id/searchFragment"
        android:icon="@drawable/vector"/>

    <item android:title="@string/btm_program"
        android:id="@+id/programsFragment2"
        android:icon="@drawable/programs"/>

    <item android:title="@string/btm_messages"
        android:id="@+id/messagesFragment"
        android:icon="@drawable/messages" />

    <item android:title="@string/btm_profile"
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile"/>
</menu>