<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.CertificatesFragment">

    <ImageView
        android:id="@+id/cert_back"
        android:layout_width="13dp"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/cert_back"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_certificates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/mukta_bold"
        android:text="@string/certificates"
        android:textColor="@color/mms_black_2"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/cert_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cert_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/mms_black_5"
        android:contentDescription="@string/cert_search"
        android:src="@drawable/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        app:cardBackgroundColor="@color/mms_black_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_certificates">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="110dp">

            <ImageView
                android:id="@+id/certDash_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/cert_image"
                android:src="@drawable/approved_certs"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/app_cert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/mukta_bold"
                android:text="@string/approved_certificates"
                android:textColor="@color/mms_black_2"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/certDash_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/no_of_apprCert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/mukta_extrabold"
                android:text="@string/_287"
                android:textColor="@color/mms_black_1"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/certDash_image"
                app:layout_constraintTop_toBottomOf="@+id/app_cert"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/cert_btn"
                android:layout_width="88dp"
                android:layout_height="39dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/mms_pry_2"
                android:text="@string/view"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/app_cert"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/mms_black_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="110dp">

            <ImageView
                android:id="@+id/earn_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/earn_img"
                android:src="@drawable/earned_cert"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cert_earned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/mukta_bold"
                android:text="@string/earned_certififcates"
                android:textColor="@color/mms_black_2"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/earn_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/earn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="33dp"
                android:fontFamily="@font/mukta_extrabold"
                android:text="@string/_12"
                android:textColor="@color/mms_black_1"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/earn_img"
                app:layout_constraintTop_toBottomOf="@+id/cert_earned" />

            <Button
                android:id="@+id/earn_btn"
                android:layout_width="88dp"
                android:layout_height="39dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/custom_button"
                android:text="@string/view"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:id="@+id/pend_cert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/mukta_regular"
                android:text="@string/certificates_pending_approval"
                android:textColor="@color/mms_black_2"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/no_of_cert"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:background="@color/mms_sec_6"
                android:fontFamily="@font/mukta_regular"
                android:gravity="center"
                android:text="@string/_3"
                android:textColor="@color/mms_green_11"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/pend_cert"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/newCert_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/mukta_semibold"
        android:text="@string/generate_new_certificate"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/apply_for_cert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_for_cert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/mms_pry_2"
        app:strokeWidth="1dp"
        android:backgroundTint="@color/mms_black_10"
        android:fontFamily="@font/mukta_semibold"
        android:text="@string/apply_for_certificate"
        android:textColor="@color/mms_pry_2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newCert_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>

