<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EmptyNotificationsFragment">

    <Spinner
        android:id="@+id/spinnerEmptyNotifications"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:entries="@array/notification_category"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMarkAllAsRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mukta_regular"
        android:text="@string/mark_all_as_read"
        android:textColor="@color/mms_black_7"
        android:textSize="12sp"
        android:padding="8dp"
        android:layout_marginStart="166dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerEmptyNotifications"
        app:layout_constraintStart_toEndOf="@+id/spinnerEmptyNotifications"
        app:layout_constraintTop_toTopOf="@+id/spinnerEmptyNotifications"
        app:drawableEndCompat="@drawable/markcomplete"
        app:drawableTint="@color/mms_black_7" />

    <ImageView
        android:id="@+id/imgEmptyNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="79dp"
        android:src="@drawable/empty_notification_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEmptyNotifications" />

    <TextView
        android:id="@+id/tvNothingFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mukta_semibold"
        android:text="@string/nothing_found"
        android:textColor="@color/mms_black_2"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgEmptyNotifications" />

    <TextView
        android:id="@+id/tvCheckBackLater"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mukta_regular"
        android:text="@string/notification_check_back_later"
        android:textSize="12sp"
        android:textColor="@color/mms_black_1"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNothingFound" />


</androidx.constraintlayout.widget.ConstraintLayout>