<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.GenerateCertificateFragment">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/btnBackProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cert_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/mukta_semibold"
        android:text="@string/select_program"
        android:textColor="@color/mms_black_2"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnBackProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/mm_cert_cardView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cert_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/mmProfilePicture"
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="266dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ellipse"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:shapeAppearanceOverlay="@style/Circular" />

            <TextView
                android:id="@+id/mmprofile_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/mukta_regular"
                android:text="@string/franka_kebede"
                android:textColor="@color/mms_black_2"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/mmProfilePicture"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cert_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/mukta_regular"
                android:text="@string/program_assistant_andela_she_her"
                android:textColor="@color/mms_black_5"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mmProfilePicture"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.463" />

            <Button
                android:id="@+id/pa_btn"
                android:layout_width="133dp"
                android:layout_height="41dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_btn_generate"
                android:text="@string/program_assit"
                android:textColor="@color/mms_pry_2"
                android:textSize="11sp"
                app:backgroundTint="@color/mms_green_11"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mmProfilePicture"
                app:layout_constraintTop_toBottomOf="@+id/cert_details"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/mentor_btn"
                android:layout_width="115dp"
                android:layout_height="36dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/custom_btn_generate"
                android:text="@string/mentor_gad"
                android:textColor="@color/mms_pry_2"
                android:textSize="11sp"
                app:backgroundTint="@color/mms_green_11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/pa_btn"
                app:layout_constraintTop_toBottomOf="@+id/cert_details" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/showPrograms"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/select_programs"
        app:endIconDrawable="@drawable/img"
        app:layout_constraintEnd_toEndOf="@id/mm_cert_cardView1"
        app:layout_constraintStart_toStartOf="@id/mm_cert_cardView1"
        app:layout_constraintTop_toBottomOf="@id/mm_cert_cardView1">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none">
        </AutoCompleteTextView>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/certificate_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ace_1__1_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showPrograms" />

    <Button
        android:id="@+id/generate_btn_"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/customs_btn_generate"
        android:text="Generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/certificate_header" />


</androidx.constraintlayout.widget.ConstraintLayout>